# RUTRIX

./: .dockerignore  .gitignore  Dockerfile  HF_README.md  README.md  START.bat  build.sh  docker-compose.yml  docker-entrypoint.sh  render.yaml  start.sh  taleemat.txt  اعادة_تشغيل.bat  بناء_التطبيق.bat  فتح_الجدار_الناري.bat  مسح_الخريطة.bat  ملخص.txt  نشر_سحابي.bat
backend/: .env.example  requirements.txt
backend/app/: bootstrap.py  config.py  database.py  dependencies.py  main.py  models.py  persistence.py  schemas.py  websocket.py
backend/app/routers/: audit.py  auth.py  detections.py  (+4 more)
edge-sdk/: pyproject.toml  requirements.txt
edge-sdk/examples/: mms_drone_example.py
edge-sdk/pothole_sdk/: __init__.py  client.py  detector.py  queue.py
ml/: active_retrain.py  dataset_aggregator.py  export_onnx.py  inference_onnx.py  requirements.txt  train.py
ml/configs/: data.yaml
ml/scripts/: download_datasets.py
mobile/: .gitignore  App.js  PLAY_STORE.md  app.json  eas.json  package-lock.json  package.json
mobile/src/: LocaleContext.js  api.js  auth.js  brand.js  i18n.js  storage.js  theme.js
scripts/: build-dashboard.ps1  build-mobile.ps1  build-play.ps1  clear-map.ps1  gen_ssl.py  generate-app-icons.py  generate-icons.mjs  generate-mark.mjs  generate_icons.py  install.ps1  package-lock.json  package.json  push-hf-space.ps1  set-cloud-url.ps1  start.ps1  stop-all.ps1
web-dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web-dashboard/public/: manifest.webmanifest
web-dashboard/src/: App.jsx  brand.js  index.css  main.jsx
(+111 files in other folders)
