[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pothole-sdk"
version = "1.0.0"
description = "Edge SDK for pothole detection (MMS, drone, embedded)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pothole_sdk*"]
